--- a/Pages/EditSupplier.cshtml
+++ b/Pages/EditSupplier.cshtml
@@ -85,6 +85,12 @@
                                     value="@Model.SupplierName" />
 
                             </div>
+                            <div class="mb-4">
+                                <label for="CoordinatorName">@Model.lblCoordinatorName</label>
+                                <input type="text" class="form-control" id="CoordinatorName" name="CoordinatorName"
+                                    value="@Model.CoordinatorName" />
+
+                            </div>
 
                             <div class="mb-4">
                                 <label for="SupplierName">@Model.lblSupplierPhoneNumber</label>
